# chinese-chess-robot

./: CMakeLists.txt  LICENSE  README.md  TinyRosConfig.cmake.in
chessplayer/: .gitignore  CMakeLists.txt
chessplayer/resource/: game_config.yml  stockfish
chessplayer/scripts/: set_env.sh  start_arm_calibrator.sh  start_arm_tester.sh  start_chinese_chess.sh  start_global.sh  stop_arm_calibrator.sh  stop_arm_tester.sh  stop_chinese_chess.sh  stop_global.sh
chessplayer/scripts/preset/: autostart.sh  keyboard_set.sh
chessplayer/src/arm_calibrator/: CMakeLists.txt  arm_calibrator.cpp
chessplayer/src/arm_tester/: CMakeLists.txt  arm_tester.cpp
chessplayer/src/chinese_chess/arm/: CMakeLists.txt  arm.cpp
chessplayer/src/chinese_chess/calibrator/: CMakeLists.txt  calibrator.cpp
chessplayer/src/chinese_chess/camera/: CMakeLists.txt  camera.cpp  camera.cpp.bk
chessplayer/src/chinese_chess/detector/: CMakeLists.txt  detector.cpp
chessplayer/src/chinese_chess/game/: CMakeLists.txt  game.cpp
chessplayer/src/chinese_chess/situator/: CMakeLists.txt  chess_manager.cpp  chess_manager.hpp  pipe.cpp  pipe.hpp  situator.cpp  ucci_engine.cpp  ucci_engine.hpp
chessplayer/src/common/: timer.hpp
chessplayer/src/common/arm_tools/: arm_controller.cpp  arm_controller.hpp  command_manager.cpp  command_manager.hpp  config.cpp  config.cpp.v1  config.hpp  serial_manager.cpp  serial_manager.hpp  uart.cpp  uart.hpp  util.cpp  util.hpp
chessplayer/src/global/interactor/: CMakeLists.txt  interactor.cpp
chessplayer/src/global/mode_ctrl/: CMakeLists.txt  mode_ctrl.cpp
chessplayer/src/global/voice/: CMakeLists.txt  voice.cpp
chessplayer/src/global/voice/decoder/: decoder.cpp  decoder.h  ffmpeg_decoder.cpp  ffmpeg_decoder.h  pcm_reader.cpp  pcm_reader.h
chessplayer/src/global/voice/player/: alsa_player.cpp  alsa_player.h  pcm_dumper.cpp  pcm_dumper.h  player.cpp  player.h
cmake/: FindGRPC.cmake  FindProtobuf.cmake
exe/: hlbcore.cpp  hlbnode.cpp  hlbrun.cpp
src/base/: core.cpp  core.hpp  node.cpp  node.hpp  parameter_server.cpp  parameter_server.hpp  publisher.cpp  publisher.hpp  publisher_proxy.cpp  publisher_proxy.hpp  stub.hpp  subscriber.cpp  subscriber.hpp  subscriber_proxy.cpp  subscriber_proxy.hpp  topic.cpp  topic.hpp
src/message/: std_msgs.cpp  std_msgs.hpp
src/proto/: tinyros.proto
src/util/: util.cpp  util.hpp
tinyros/: CMakeLists.txt
tinyros/cmake/: FindGRPC.cmake
tinyros/exe/: ros_core.cpp  ros_node.cpp  ros_run.cpp
tinyros/src/base/: core.cpp  core.hpp  node.cpp  node.hpp  parameter_server.cpp  parameter_server.hpp  publisher.hpp  publisher_proxy.cpp  publisher_proxy.hpp  stub.hpp  subscriber.hpp  subscriber_proxy.cpp  subscriber_proxy.hpp  topic.cpp  topic.hpp
tinyros/src/message/: std_msgs.cpp  std_msgs.hpp
tinyros/src/proto/: tinyros.proto
tinyros/src/util/: util.cpp  util.hpp
yolov7/: split_train_val.py  test.py  train.py  voc_label.py
yolov7/cfg/training/: yolov7-tiny.yaml
yolov7/data/: chess.yaml
yolov7/models/: yolo.py
yolov7/utils/: torch_utils.py
